--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "firebase-admin": "^13.0.0",
     "helmet": "^8.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
