--- a/compose.yaml
+++ b/compose.yaml
@@ -13,8 +13,11 @@ services:
     build:
       context: .
       target: dev
-    env_file:
-      - .env
+    volumes:
+      - ~/.config/gcloud/application_default_credentials.json:/app/.config/gcloud/application_default_credentials.json:ro
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/.config/gcloud/application_default_credentials.json
+      - GOOGLE_CLOUD_PROJECT=catat-arey
     ports:
       - 8080:8080
 
