--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/firestore": "^7.10.0",
+    "@google-cloud/secret-manager": "^5.6.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
