implement github actions workflow for continuous delivery

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,7 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
-**/secrets
+**/.github
 **/.classpath
 **/.dockerignore
 **/.env*
