--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "start": "NODE_ENV=production node src/server.js",
     "dev": "NODE_ENV=development nodemon src/server.js",
     "lint": "eslint .",
@@ -27,11 +27,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.13.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.1",
+    "supertest": "^7.0.0"
   }
 }
