--- a/compose.yaml
+++ b/compose.yaml
@@ -3,10 +3,14 @@ services:
     build:
       context: .
       target: dev
-    volumes:
-      - ~/.config/gcloud/application_default_credentials.json:/app/.config/gcloud/application_default_credentials.json:ro
+    secrets:
+      - gcloud_credentials
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/.config/gcloud/application_default_credentials.json
+      - GOOGLE_APPLICATION_CREDENTIALS=/run/secrets/gcloud_credentials
       - GOOGLE_CLOUD_PROJECT=catat-arey
     ports:
       - 8080:8080
+
+secrets:
+  gcloud_credentials:
+    file: ~/.config/gcloud/application_default_credentials.json
