implement endpoint for logging history data

--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   server:
     build:
       context: .
-      target: dev
+      target: prod
     secrets:
       - gcloud_credentials
     environment:
