--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mathjs": "^14.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
